--- a/public/index.html
+++ b/public/index.html
@@ -9,25 +9,56 @@
   </head>
   <body>
     <div id="root">
-      <div class="content-wrapper">
-        <header id="header"></header>
+      <div
+        class="content-wrapper mx-auto max-w-screen-2xl bg-slate-200 px-8 text-base"
+      >
+        <header id="header" class="mx-10 py-6">
+          <nav class="flex flex-row items-center justify-between">
+            <div
+              class="logo basis-2/6 cursor-pointer text-center text-xl font-semibold"
+            >
+              CoffeeStyle.
+            </div>
+            <ul
+              class="flex basis-3/6 items-center justify-end gap-8 text-sm font-medium uppercase text-gray-500"
+            >
+              <li class="ct-top-menu-item">
+                <a href="#" class="">Home</a>
+              </li>
+              <li class="ct-top-menu-item">
+                <a href="#" class="">Products</a>
+              </li>
+              <li class="ct-top-menu-item"><a href="#" class="">Blog</a></li>
+              <li class="ct-top-menu-item"><a href="#" class="">About</a></li>
+              <li class="ct-top-menu-item"><a href="#" class="">Contact</a></li>
+              <li class="ct-top-menu-item">
+                <a href="#" class="">Styleguide</a>
+              </li>
+            </ul>
+            <ul class="basis-1/6">
+              <li class="ct-top-menu-item">
+                <a href="#" class="">Cart</a>
+              </li>
+            </ul>
+          </nav>
+        </header>
         <main id="main">
-          <div class="slider"></div>
+          <div class="slider">slider</div>
           <!-- End slider -->
-          <div class="story"></div>
+          <div class="story">story</div>
           <!-- End story -->
-          <div class="featured-mugs"></div>
+          <div class="featured-mugs">featured-mugs</div>
           <!-- End featured-mugs -->
-          <div class="more-products"></div>
+          <div class="more-products">more-products</div>
           <!-- End more-products -->
-          <div class="coffee-magazine"></div>
+          <div class="coffee-magazine">coffee-magazine</div>
           <!-- End coffee-magazine -->
-          <div class="lifestyle-stories"></div>
+          <div class="lifestyle-stories">lifestyle-stories</div>
           <!-- End lifestyle-stories -->
-          <div class="subscribe-us"></div>
+          <div class="subscribe-us">subscribe-us</div>
           <!-- End subscribe-us -->
         </main>
-        <footer id="footer"></footer>
+        <footer id="footer">footer</footer>
       </div>
       <!-- End content wrapper -->
     </div>
