--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
   <body>
     <div id="root">
       <div
-        class="content-wrapper mx-auto max-w-screen-2xl bg-slate-200 px-8 font-Karla text-base"
+        class="content-wrapper mx-auto max-w-screen-2xl px-8 font-Karla text-base"
       >
         <header id="header" class="mx-auto p-6">
           <nav class="relative flex flex-row items-center justify-between">
@@ -90,7 +90,31 @@
           </nav>
         </header>
         <main id="main">
-          <div class="slider">slider</div>
+          <div
+            class="slider h-[530px] bg-[url('./img/slider-bg.jpeg')] bg-cover bg-bottom bg-no-repeat"
+          >
+            <div
+              class="flex h-full w-full items-center justify-center bg-gray-900 bg-opacity-40"
+            >
+              <div class="mx-16 text-center text-white">
+                <div class="mb-6 uppercase">best place to buy coffee</div>
+                <div class="mb-6 text-5xl font-medium capitalize">
+                  coffee mugs
+                </div>
+                <div class="mb-8 text-lg font-medium">
+                  The most versatile furniture system ever created. Designed to
+                  fit your life, made to move and grow.
+                </div>
+                <div class="flex justify-center">
+                  <div
+                    class="w-max cursor-pointer bg-white py-4 px-8 text-sm font-semibold uppercase tracking-wider text-gray-900 hover:bg-opacity-95"
+                  >
+                    explore our products
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
           <!-- End slider -->
           <div class="story">story</div>
           <!-- End story -->
