add story section and sub-heading

--- a/public/index.html
+++ b/public/index.html
@@ -116,14 +116,64 @@
             </div>
           </div>
           <!-- End slider -->
-          <div class="story">story</div>
+          <div class="story">
+            <div class="flex h-full w-full items-center justify-center">
+              <div
+                class="px-4 py-32 text-center sm:px-16 md:px-32 lg:px-64 xl:px-96"
+              >
+                <div class="mb-6 text-3xl font-normal leading-10">
+                  Even the all-powerful Pointing has no control about the blind
+                  texts.
+                </div>
+                <div class="mb-6 leading-7 text-gray-500">
+                  It is a paradisematic country, in which roasted parts of
+                  sentences fly into your mouth. <br />
+                  Even the all-powerful Pointing has no control about the blind
+                  texts it is an almost unorthographic life One day however a
+                  small line of blind text by the name of Lorem Ipsum decided to
+                  leave for the far World of Grammar.
+                </div>
+                <div class="">
+                  <a
+                    href="#"
+                    class="relative text-coffee-400 after:absolute after:-bottom-2 after:left-0 after:h-0.5 after:w-full after:bg-coffee-50 after:transition-all after:duration-300 after:ease-in-out hover:text-coffee-600 hover:after:bg-coffee-200"
+                    >Read the full Story</a
+                  >
+                </div>
+              </div>
+            </div>
+          </div>
           <!-- End story -->
+          <div class="ct-sub-heading">
+            <div class="ct-sub-heading-deco-line"></div>
+            <div class="ct-sub-heading-label">featured mugs</div>
+            <div class="ct-sub-heading-deco-line"></div>
+          </div>
           <div class="featured-mugs">featured-mugs</div>
           <!-- End featured-mugs -->
+          <div class="ct-sub-heading">
+            <div class="ct-sub-heading-deco-line"></div>
+            <div class="ct-sub-heading-label">more products</div>
+            <div class="ct-sub-heading-deco-line"></div>
+          </div>
           <div class="more-products">more-products</div>
           <!-- End more-products -->
+          <div class="ct-sub-heading">
+            <div class="ct-sub-heading-deco-line"></div>
+            <div class="ct-sub-heading-label">
+              Buy 2 mugs and get a coffee magazine free
+            </div>
+            <div class="ct-sub-heading-deco-line"></div>
+          </div>
           <div class="coffee-magazine">coffee-magazine</div>
           <!-- End coffee-magazine -->
+          <div class="ct-sub-heading">
+            <div class="ct-sub-heading-deco-line"></div>
+            <div class="ct-sub-heading-label">
+              Behind the mugs, lifestyle stories
+            </div>
+            <div class="ct-sub-heading-deco-line"></div>
+          </div>
           <div class="lifestyle-stories">lifestyle-stories</div>
           <!-- End lifestyle-stories -->
           <div class="subscribe-us">subscribe-us</div>
