add featured mugs - product card

--- a/public/index.html
+++ b/public/index.html
@@ -107,7 +107,7 @@
                 </div>
                 <div class="flex justify-center">
                   <div
-                    class="w-max cursor-pointer bg-white py-4 px-8 text-sm font-semibold uppercase tracking-wider text-gray-900 hover:bg-opacity-95"
+                    class="ct-button w-max cursor-pointer bg-white text-gray-900"
                   >
                     explore our products
                   </div>
@@ -116,30 +116,28 @@
             </div>
           </div>
           <!-- End slider -->
-          <div class="story">
-            <div class="flex h-full w-full items-center justify-center">
-              <div
-                class="px-4 py-32 text-center sm:px-16 md:px-32 lg:px-64 xl:px-96"
-              >
-                <div class="mb-6 text-3xl font-normal leading-10">
-                  Even the all-powerful Pointing has no control about the blind
-                  texts.
-                </div>
-                <div class="mb-6 leading-7 text-gray-500">
-                  It is a paradisematic country, in which roasted parts of
-                  sentences fly into your mouth. <br />
-                  Even the all-powerful Pointing has no control about the blind
-                  texts it is an almost unorthographic life One day however a
-                  small line of blind text by the name of Lorem Ipsum decided to
-                  leave for the far World of Grammar.
-                </div>
-                <div class="">
-                  <a
-                    href="#"
-                    class="relative text-coffee-400 after:absolute after:-bottom-2 after:left-0 after:h-0.5 after:w-full after:bg-coffee-50 after:transition-all after:duration-300 after:ease-in-out hover:text-coffee-600 hover:after:bg-coffee-200"
-                    >Read the full Story</a
-                  >
-                </div>
+          <div class="story flex items-center justify-center">
+            <div
+              class="px-4 py-32 text-center sm:px-16 md:px-32 lg:px-64 xl:px-96"
+            >
+              <div class="mb-6 text-3xl font-normal leading-10">
+                Even the all-powerful Pointing has no control about the blind
+                texts.
+              </div>
+              <div class="mb-6 leading-7 text-gray-500">
+                It is a paradisematic country, in which roasted parts of
+                sentences fly into your mouth. <br />
+                Even the all-powerful Pointing has no control about the blind
+                texts it is an almost unorthographic life One day however a
+                small line of blind text by the name of Lorem Ipsum decided to
+                leave for the far World of Grammar.
+              </div>
+              <div class="">
+                <a
+                  href="#"
+                  class="relative text-coffee-400 after:absolute after:-bottom-2 after:left-0 after:h-0.5 after:w-full after:bg-coffee-50 after:transition-all after:duration-300 after:ease-in-out hover:text-coffee-600 hover:after:bg-coffee-200"
+                  >Read the full Story</a
+                >
               </div>
             </div>
           </div>
@@ -149,7 +147,72 @@
             <div class="ct-sub-heading-label">featured mugs</div>
             <div class="ct-sub-heading-deco-line"></div>
           </div>
-          <div class="featured-mugs">featured-mugs</div>
+          <div class="featured-mugs mx-auto mb-24 w-[95%] lg:w-[65%]">
+            <div class="grid grid-cols-1 gap-8 lg:grid-cols-2 lg:gap-4">
+              <div class="ct-product-card">
+                <div
+                  class="h-[400px] bg-[url('./img/featured-mug-01.jpg')] bg-cover bg-center bg-no-repeat sm:h-[540px]"
+                >
+                  <a href="#">
+                    <div
+                      class="hover:duration-400 group relative h-full w-full hover:bg-gray-900 hover:bg-opacity-10 hover:transition-all hover:ease-in-out"
+                    >
+                      <div
+                        class="ct-button absolute bottom-4 left-1/2 hidden w-11/12 -translate-x-1/2 bg-white text-gray-900 group-hover:block group-hover:animate-fadeIn"
+                      >
+                        explore mug
+                      </div>
+                    </div>
+                  </a>
+                </div>
+                <div class="mt-8 text-center">
+                  <a href="#">
+                    <div class="mb-3 text-xl hover:text-coffee-400">
+                      Pink Premium Ceramic
+                    </div>
+                  </a>
+                  <div class="">
+                    <span class="text-gray-500">$99.00 USD</span>
+                  </div>
+                </div>
+              </div>
+              <div class="ct-product-card">
+                <div
+                  class="h-[400px] bg-[url('./img/featured-mug-02.jpg')] bg-cover bg-center bg-no-repeat sm:h-[540px]"
+                >
+                  <a href="#">
+                    <div
+                      class="hover:duration-400 group relative h-full w-full hover:bg-gray-900 hover:bg-opacity-10 hover:transition-all hover:ease-in-out"
+                    >
+                      <div
+                        class="absolute top-3 right-3 w-[100px] bg-white py-2 px-4 text-center font-semibold text-coffee-400"
+                      >
+                        On Sale.
+                      </div>
+                      <div
+                        class="ct-button absolute bottom-4 left-1/2 hidden w-11/12 -translate-x-1/2 bg-white text-gray-900 group-hover:block group-hover:animate-fadeIn"
+                      >
+                        explore mug
+                      </div>
+                    </div>
+                  </a>
+                </div>
+                <div class="mt-8 text-center">
+                  <a href="#">
+                    <div class="mb-3 text-xl hover:text-coffee-400">
+                      Golden Designers Mug
+                    </div>
+                  </a>
+                  <div class="">
+                    <span class="text-lg text-coffee-400">$50.00</span>
+                    <span class="ml-2 text-gray-400 line-through"
+                      >$69.00 USD</span
+                    >
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
           <!-- End featured-mugs -->
           <div class="ct-sub-heading">
             <div class="ct-sub-heading-deco-line"></div>
