add more products

--- a/public/index.html
+++ b/public/index.html
@@ -219,7 +219,271 @@
             <div class="ct-sub-heading-label">more products</div>
             <div class="ct-sub-heading-deco-line"></div>
           </div>
-          <div class="more-products">more-products</div>
+          <div class="more-products mx-auto mb-16 w-[95%] lg:w-[65%]">
+            <div
+              class="grid grid-cols-1 gap-8 md:grid-cols-2 md:gap-4 lg:grid-cols-3"
+            >
+              <div class="ct-product-card">
+                <div
+                  class="h-[380px] bg-[url('./img/product-coffee-01.jpeg')] bg-cover bg-center bg-no-repeat"
+                >
+                  <a href="#">
+                    <div
+                      class="hover:duration-400 group relative h-full w-full hover:bg-gray-900 hover:bg-opacity-10 hover:transition-all hover:ease-in-out"
+                    >
+                      <div
+                        class="absolute top-3 right-3 w-[100px] bg-white py-2 px-4 text-center font-semibold text-coffee-400"
+                      >
+                        On Sale.
+                      </div>
+                      <div
+                        class="ct-button absolute bottom-4 left-1/2 hidden w-11/12 -translate-x-1/2 bg-white text-gray-900 group-hover:block group-hover:animate-fadeIn"
+                      >
+                        explore mug
+                      </div>
+                    </div>
+                  </a>
+                </div>
+                <div class="my-8 text-center">
+                  <a href="#">
+                    <div class="mb-3 text-xl hover:text-coffee-400">
+                      Red Love Cup
+                    </div>
+                  </a>
+                  <div class="">
+                    <span class="text-lg text-coffee-400">$25.00</span>
+                    <span class="ml-2 text-gray-400 line-through"
+                      >$37.00 USD</span
+                    >
+                  </div>
+                </div>
+              </div>
+              <div class="ct-product-card">
+                <div
+                  class="h-[380px] bg-[url('./img/product-coffee-02.jpeg')] bg-cover bg-center bg-no-repeat"
+                >
+                  <a href="#">
+                    <div
+                      class="hover:duration-400 group relative h-full w-full hover:bg-gray-900 hover:bg-opacity-10 hover:transition-all hover:ease-in-out"
+                    >
+                      <div
+                        class="absolute top-3 right-3 w-[100px] bg-white py-2 px-4 text-center font-semibold text-coffee-400"
+                      >
+                        On Sale.
+                      </div>
+                      <div
+                        class="ct-button absolute bottom-4 left-1/2 hidden w-11/12 -translate-x-1/2 bg-white text-gray-900 group-hover:block group-hover:animate-fadeIn"
+                      >
+                        explore mug
+                      </div>
+                    </div>
+                  </a>
+                </div>
+                <div class="my-8 text-center">
+                  <a href="#">
+                    <div class="mb-3 text-xl hover:text-coffee-400">
+                      Black Tea Cup
+                    </div>
+                  </a>
+                  <div class="">
+                    <span class="text-lg text-coffee-400">$15.00</span>
+                    <span class="ml-2 text-gray-400 line-through"
+                      >$29.00 USD</span
+                    >
+                  </div>
+                </div>
+              </div>
+              <div class="ct-product-card">
+                <div
+                  class="h-[380px] bg-[url('./img/product-coffee-03.jpeg')] bg-cover bg-center bg-no-repeat"
+                >
+                  <a href="#">
+                    <div
+                      class="hover:duration-400 group relative h-full w-full hover:bg-gray-900 hover:bg-opacity-10 hover:transition-all hover:ease-in-out"
+                    >
+                      <div
+                        class="ct-button absolute bottom-4 left-1/2 hidden w-11/12 -translate-x-1/2 bg-white text-gray-900 group-hover:block group-hover:animate-fadeIn"
+                      >
+                        explore mug
+                      </div>
+                    </div>
+                  </a>
+                </div>
+                <div class="my-8 text-center">
+                  <a href="#">
+                    <div class="mb-3 text-xl hover:text-coffee-400">
+                      B&W Essentials Mug
+                    </div>
+                  </a>
+                  <div class="">
+                    <span class="text-gray-400">$19.00 USD</span>
+                  </div>
+                </div>
+              </div>
+              <div class="ct-product-card">
+                <div
+                  class="h-[380px] bg-[url('./img/product-coffee-04.jpeg')] bg-cover bg-center bg-no-repeat"
+                >
+                  <a href="#">
+                    <div
+                      class="hover:duration-400 group relative h-full w-full hover:bg-gray-900 hover:bg-opacity-10 hover:transition-all hover:ease-in-out"
+                    >
+                      <div
+                        class="ct-button absolute bottom-4 left-1/2 hidden w-11/12 -translate-x-1/2 bg-white text-gray-900 group-hover:block group-hover:animate-fadeIn"
+                      >
+                        explore mug
+                      </div>
+                    </div>
+                  </a>
+                </div>
+                <div class="my-8 text-center">
+                  <a href="#">
+                    <div class="mb-3 text-xl hover:text-coffee-400">
+                      Winter Style Mug
+                    </div>
+                  </a>
+                  <div class="">
+                    <span class="text-gray-400">$25.00 USD</span>
+                  </div>
+                </div>
+              </div>
+              <div class="ct-product-card">
+                <div
+                  class="h-[380px] bg-[url('./img/product-coffee-05.jpeg')] bg-cover bg-center bg-no-repeat"
+                >
+                  <a href="#">
+                    <div
+                      class="hover:duration-400 group relative h-full w-full hover:bg-gray-900 hover:bg-opacity-10 hover:transition-all hover:ease-in-out"
+                    >
+                      <div
+                        class="ct-button absolute bottom-4 left-1/2 hidden w-11/12 -translate-x-1/2 bg-white text-gray-900 group-hover:block group-hover:animate-fadeIn"
+                      >
+                        explore mug
+                      </div>
+                    </div>
+                  </a>
+                </div>
+                <div class="my-8 text-center">
+                  <a href="#">
+                    <div class="mb-3 text-xl hover:text-coffee-400">
+                      Ceramic Tea
+                    </div>
+                  </a>
+                  <div class="">
+                    <span class="text-gray-400">$46.00 USD</span>
+                  </div>
+                </div>
+              </div>
+              <div class="ct-product-card">
+                <div
+                  class="h-[380px] bg-[url('./img/product-coffee-06.jpeg')] bg-cover bg-center bg-no-repeat"
+                >
+                  <a href="#">
+                    <div
+                      class="hover:duration-400 group relative h-full w-full hover:bg-gray-900 hover:bg-opacity-10 hover:transition-all hover:ease-in-out"
+                    >
+                      <div
+                        class="ct-button absolute bottom-4 left-1/2 hidden w-11/12 -translate-x-1/2 bg-white text-gray-900 group-hover:block group-hover:animate-fadeIn"
+                      >
+                        explore mug
+                      </div>
+                    </div>
+                  </a>
+                </div>
+                <div class="my-8 text-center">
+                  <a href="#">
+                    <div class="mb-3 text-xl hover:text-coffee-400">
+                      No Handle Bar Cup
+                    </div>
+                  </a>
+                  <div class="">
+                    <span class="text-gray-400">$46.00 USD</span>
+                  </div>
+                </div>
+              </div>
+              <div class="ct-product-card">
+                <div
+                  class="h-[380px] bg-[url('./img/product-coffee-07.jpeg')] bg-cover bg-center bg-no-repeat"
+                >
+                  <a href="#">
+                    <div
+                      class="hover:duration-400 group relative h-full w-full hover:bg-gray-900 hover:bg-opacity-10 hover:transition-all hover:ease-in-out"
+                    >
+                      <div
+                        class="ct-button absolute bottom-4 left-1/2 hidden w-11/12 -translate-x-1/2 bg-white text-gray-900 group-hover:block group-hover:animate-fadeIn"
+                      >
+                        explore mug
+                      </div>
+                    </div>
+                  </a>
+                </div>
+                <div class="my-8 text-center">
+                  <a href="#">
+                    <div class="mb-3 text-xl hover:text-coffee-400">
+                      Espresso Cup by Mugs.co
+                    </div>
+                  </a>
+                  <div class="">
+                    <span class="text-gray-400">$47.00 USD</span>
+                  </div>
+                </div>
+              </div>
+              <div class="ct-product-card">
+                <div
+                  class="h-[380px] bg-[url('./img/featured-mug-02.jpg')] bg-cover bg-center bg-no-repeat"
+                >
+                  <a href="#">
+                    <div
+                      class="hover:duration-400 group relative h-full w-full hover:bg-gray-900 hover:bg-opacity-10 hover:transition-all hover:ease-in-out"
+                    >
+                      <div
+                        class="ct-button absolute bottom-4 left-1/2 hidden w-11/12 -translate-x-1/2 bg-white text-gray-900 group-hover:block group-hover:animate-fadeIn"
+                      >
+                        explore mug
+                      </div>
+                    </div>
+                  </a>
+                </div>
+                <div class="my-8 text-center">
+                  <a href="#">
+                    <div class="mb-3 text-xl hover:text-coffee-400">
+                      Pink Premium Ceramic
+                    </div>
+                  </a>
+                  <div class="">
+                    <span class="text-gray-400">$99.00 USD</span>
+                  </div>
+                </div>
+              </div>
+              <div class="ct-product-card">
+                <div
+                  class="h-[380px] bg-[url('./img/product-coffee-09.jpeg')] bg-cover bg-center bg-no-repeat"
+                >
+                  <a href="#">
+                    <div
+                      class="hover:duration-400 group relative h-full w-full hover:bg-gray-900 hover:bg-opacity-10 hover:transition-all hover:ease-in-out"
+                    >
+                      <div
+                        class="ct-button absolute bottom-4 left-1/2 hidden w-11/12 -translate-x-1/2 bg-white text-gray-900 group-hover:block group-hover:animate-fadeIn"
+                      >
+                        explore mug
+                      </div>
+                    </div>
+                  </a>
+                </div>
+                <div class="my-8 text-center">
+                  <a href="#">
+                    <div class="mb-3 text-xl hover:text-coffee-400">
+                      Summer Designer Cup
+                    </div>
+                  </a>
+                  <div class="">
+                    <span class="text-gray-400">$29.00 USD</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
           <!-- End more-products -->
           <div class="ct-sub-heading">
             <div class="ct-sub-heading-deco-line"></div>
