add parallax section

--- a/public/index.html
+++ b/public/index.html
@@ -421,6 +421,10 @@
           </div>
         </div>
         <!-- End coffee-magazine -->
+        <div
+          class="ct-parallax-section bg-[url('./img/bg-parallax-01.jpeg')] bg-cover bg-center bg-no-repeat h-[400px] mb-24 bg-fixed w-[100vw] relative left-[calc(-50vw_+_50%)]">
+        </div>
+        <!--End Parallax section -->
         <div class="ct-sub-heading">
           <div class="ct-sub-heading-deco-line"></div>
           <div class="ct-sub-heading-label">
