--- a/public/index.html
+++ b/public/index.html
@@ -432,7 +432,88 @@
           </div>
           <div class="ct-sub-heading-deco-line"></div>
         </div>
-        <div class="lifestyle-stories">lifestyle-stories</div>
+        <div class="lifestyle-stories w-[95%] xl:w-[65%] mx-auto mb-24">
+          <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 md:gap-4">
+            <div class="ct-lifestyle-story-card">
+              <div class="h-[300px] bg-[url('./img/lifestyle-story-01.jpeg')] bg-cover bg-center bg-no-repeat">
+                <a href="#">
+                  <div
+                    class="hover:duration-400 group relative h-full w-full hover:bg-gray-900 hover:bg-opacity-10 hover:transition-all hover:ease-in-out">
+                    <div
+                      class="ct-button absolute bottom-4 left-1/2 hidden w-11/12 -translate-x-1/2 bg-white text-gray-900 group-hover:block group-hover:animate-fadeIn">
+                      read the full story
+                    </div>
+                  </div>
+                </a>
+              </div>
+              <div class="my-6">
+                <a href="#">
+                  <div class="mb-3 text-xl hover:text-coffee-400">
+                    Health Check: why do I get a headache when I haven't had my coffee?
+                  </div>
+                </a>
+                <div class="text-gray-500 leading-7 mb-3">
+                  It is a paradisematic country, in which roasted parts of sentences fly into your mouth.
+                </div>
+                <div class="text-gray-500 leading-7 uppercase text-[13px] font-semibold tracking-widest">
+                  OCTOBER 9, 2018
+                </div>
+              </div>
+            </div>
+            <div class="ct-lifestyle-story-card">
+              <div class="h-[300px] bg-[url('./img/lifestyle-story-02.jpeg')] bg-cover bg-center bg-no-repeat">
+                <a href="#">
+                  <div
+                    class="hover:duration-400 group relative h-full w-full hover:bg-gray-900 hover:bg-opacity-10 hover:transition-all hover:ease-in-out">
+                    <div
+                      class="ct-button absolute bottom-4 left-1/2 hidden w-11/12 -translate-x-1/2 bg-white text-gray-900 group-hover:block group-hover:animate-fadeIn">
+                      read the full story
+                    </div>
+                  </div>
+                </a>
+              </div>
+              <div class="my-6">
+                <a href="#">
+                  <div class="mb-3 text-xl hover:text-coffee-400">
+                    How long does a cup of coffee keep you awake?
+                  </div>
+                </a>
+                <div class="text-gray-500 leading-7 mb-3">
+                  It is a paradisematic country, in which roasted parts. Vel qui et ad voluptatem.
+                </div>
+                <div class="text-gray-500 leading-7 uppercase text-[13px] font-semibold tracking-widest">
+                  OCTOBER 9, 2018
+                </div>
+              </div>
+            </div>
+            <div class="ct-lifestyle-story-card">
+              <div class="h-[300px] bg-[url('./img/lifestyle-story-03.jpeg')] bg-cover bg-center bg-no-repeat">
+                <a href="#">
+                  <div
+                    class="hover:duration-400 group relative h-full w-full hover:bg-gray-900 hover:bg-opacity-10 hover:transition-all hover:ease-in-out">
+                    <div
+                      class="ct-button absolute bottom-4 left-1/2 hidden w-11/12 -translate-x-1/2 bg-white text-gray-900 group-hover:block group-hover:animate-fadeIn">
+                      read the full story
+                    </div>
+                  </div>
+                </a>
+              </div>
+              <div class="my-6">
+                <a href="#">
+                  <div class="mb-3 text-xl hover:text-coffee-400">
+                    Recent research suggests that heavy coffee drinkers may reap health benefits.
+                  </div>
+                </a>
+                <div class="text-gray-500 leading-7 mb-3">
+                  It is a paradisematic country, in which roasted parts of sentences fly into your mouth.
+                </div>
+                <div class="text-gray-500 leading-7 uppercase text-[13px] font-semibold tracking-widest">
+                  OCTOBER 9, 2022
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
         <!-- End lifestyle-stories -->
         <div class="subscribe-us">subscribe-us</div>
         <!-- End subscribe-us -->
