--- a/public/index.html
+++ b/public/index.html
@@ -515,10 +515,30 @@
           </div>
         </div>
         <!-- End lifestyle-stories -->
-        <div class="subscribe-us">subscribe-us</div>
+        <div class="subscribe-us h-[350px] bg-[#1d1f2e] mb-24 flex flex-col justify-center items-center">
+          <div class="mb-6 xs:mb-0 flex items-center justify-center px-6">
+            <div class="h-px w-8 bg-gray-700"></div>
+            <div class="mx-4 text-center text-xs font-bold uppercase tracking-widest text-gray-400">
+              SIGN UP AND GET FREE COFFEE BAGS
+            </div>
+            <div class="h-px w-8 bg-gray-700"></div>
+          </div>
+          <div class="mb-6 text-4xl capitalize text-white">Coffee Updates</div>
+          <div class="ct-form">
+            <div class="flex flex-col md:flex-row justify-center items-center gap-3">
+              <div class="ct-form-item text-center">
+                <input type="email" placeholder="customer@coffeestyle.io"
+                  class="px-6 py-4 w-[350px] max-w-[80%]  xs:max-w-full bg-inherit border-[1px] border-gray-500 outline-none text-white leading-5 hover:border-gray-300 focus:border-gray-300 duration-500 placeholder:uppercase placeholder:text-xs placeholder:tracking-widest placeholder:font-semibold">
+              </div>
+              <div class="ct-form-item">
+                <button type="submit" class="ct-button  bg-white text-gray-900 w-max max-h-[54px]">Subscribe</button>
+              </div>
+            </div>
+          </div>
+        </div>
         <!-- End subscribe-us -->
       </main>
-      <footer id="footer">footer</footer>
+      <footer id="footer" class="h-[350px] bg-slate-400">footer</footer>
     </div>
     <!-- End content wrapper -->
   </div>
