--- a/public/index.html
+++ b/public/index.html
@@ -538,7 +538,42 @@
         </div>
         <!-- End subscribe-us -->
       </main>
-      <footer id="footer" class="h-[350px] bg-slate-400">footer</footer>
+      <footer id="footer" class="w-[95%] xl:w-[65%] mx-auto pb-24 text-gray-500 text-sm text-center md:text-left">
+        <div class="flex flex-col md:flex-row gap-12 md:gap-8">
+          <div class="basis-2/6">
+            <div class="font-bold text-xl mb-4 text-gray-500">CoffeeStyle.</div>
+            <div class="mb-8 md:mb-20">Delivering the best coffee life since 1996. From coffee geeks to the real ones.
+            </div>
+            <div class="text-gray-400 hover:text-coffee-400">Nguyen Dang Khoa © 2023</div>
+          </div>
+          <div class="basis-1/6">
+            <div class="uppercase font-semibold tracking-wider text-gray-600 mb-4">menu</div>
+            <div class="flex flex-col gap-3">
+              <div class=""><a href="" class="hover:text-coffee-400">Home</a></div>
+              <div class=""><a href="" class="hover:text-coffee-400">Our Products</a></div>
+              <div class=""><a href="" class="hover:text-coffee-400">About</a></div>
+              <div class=""><a href="" class="hover:text-coffee-400">Contact</a></div>
+              <div class=""><a href="" class="hover:text-coffee-400">Styleguide</a></div>
+            </div>
+          </div>
+          <div class="basis-1/6">
+            <div class="uppercase font-semibold tracking-wider text-gray-600 mb-4">follow us</div>
+            <div class="flex flex-col gap-3">
+              <div class=""><a href="" class="hover:text-coffee-400">Facebook</a></div>
+              <div class=""><a href="" class="hover:text-coffee-400">Instagram</a></div>
+              <div class=""><a href="" class="hover:text-coffee-400">Pinterest</a></div>
+              <div class=""><a href="" class="hover:text-coffee-400">Twitter</a></div>
+            </div>
+          </div>
+          <div class="basis-2/6">
+            <div class="uppercase font-semibold tracking-wider text-gray-600 mb-8 md:mb-4">contact us</div>
+            <div class="mb-4">We're Always Happy to Help</div>
+            <div class="mb-16 text-gray-800 text-[22px] tracking-wide"><a href="mailto:nguyendangkhoa@gmail.com"
+                class="hover:text-coffee-400">nguyendangkhoa@gmail.com</a></div>
+            <div class=""><a href="" class="text-gray-400 hover:text-coffee-400">Powered by Nguyen Dang Khoa</a></div>
+          </div>
+        </div>
+      </footer>
     </div>
     <!-- End content wrapper -->
   </div>
