update story section

--- a/public/index.html
+++ b/public/index.html
@@ -58,7 +58,7 @@
         </nav>
       </header>
       <main id="main">
-        <div class="slider h-[530px] bg-[url('./img/slider-bg.jpeg')] bg-cover bg-bottom bg-no-repeat">
+        <div class="slider h-[530px] bg-[url('./img/slider-bg.jpeg')] bg-cover bg-bottom bg-no-repeat mb-24">
           <div class="flex h-full w-full items-center justify-center bg-gray-900 bg-opacity-40">
             <div class="mx-16 text-center text-white">
               <div class="mb-6 uppercase">best place to buy coffee</div>
@@ -78,19 +78,26 @@
           </div>
         </div>
         <!-- End slider -->
-        <div class="story flex items-center justify-center">
-          <div class="px-4 py-32 text-center sm:px-16 md:px-32 lg:px-64 xl:px-96">
+        <div class="ct-sub-heading">
+          <div class="ct-sub-heading-deco-line"></div>
+          <div class="ct-sub-heading-label">our coffee story</div>
+          <div class="ct-sub-heading-deco-line"></div>
+        </div>
+        <div
+          class="story flex flex-col lg:flex-row items-center justify-center mx-auto mb-24 w-[95%] lg:w-[65%] lg:gap-4 gap-8">
+          <div class="basis-1/2">
+            <video autoplay loop muted class="w-full h-full object-cover min-h-[350px]">
+              <source src="./video/coffee-video.mp4" type="video/mp4">
+            </video>
+          </div>
+          <div class="lg:text-left basis-1/2 text-center lg:pl-8">
             <div class="mb-6 text-3xl font-normal leading-10">
-              Even the all-powerful Pointing has no control about the blind
-              texts.
+              What is your most special coffee?
             </div>
             <div class="mb-6 leading-7 text-gray-500">
-              It is a paradisematic country, in which roasted parts of
-              sentences fly into your mouth. <br />
-              Even the all-powerful Pointing has no control about the blind
-              texts it is an almost unorthographic life One day however a
-              small line of blind text by the name of Lorem Ipsum decided to
-              leave for the far World of Grammar.
+              The French Press is a brewing method that comes closest to cupping. Cupping is the prescribed method by
+              which coffee should be judged. Nothing separates the water from the coffee. To properly discover the
+              flavours, it is best to drink the coffee this way. Everyone has their favourite brewing method.
             </div>
             <div class="">
               <a href="#"
@@ -422,7 +429,7 @@
         </div>
         <!-- End coffee-magazine -->
         <div
-          class="ct-parallax-section bg-[url('./img/bg-parallax-01.jpeg')] bg-cover bg-center bg-no-repeat h-[400px] mb-24 bg-fixed w-[100vw] relative left-[calc(-50vw_+_50%)]">
+          class="ct-parallax-section bg-[url('./img/bg-parallax-01.jpeg')] bg-cover bg-center bg-no-repeat h-[400px] md:h-[500px] mb-24 bg-fixed w-[100vw] relative left-[calc(-50vw_+_50%)]">
         </div>
         <!--End Parallax section -->
         <div class="ct-sub-heading">
